Begin transformation into javafx application